--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
     "@babel/core": "^7.20.5",
     "@babel/node": "^7.8.0",
     "@babel/preset-env": "^7.20.2",
